<resources>
    <string name="app_name">App001</string>

    <string name="description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Tristique nulla aliquet enim tortor at auctor. Et ultrices neque ornare aenean euismod elementum nisi. Bibendum arcu vitae elementum curabitur vitae. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Massa id neque aliquam vestibulum morbi blandit cursus. Duis tristique sollicitudin nibh sit amet commodo. Mi quis hendrerit dolor magna. Dolor sed viverra ipsum nunc aliquet bibendum. Lectus magna fringilla urna porttitor rhoncus dolor purus non.</string>
    <string name="realm">RealmActivity</string>
    <string name="new_item">New Item</string>
    <string name="hint_title">Title</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="label_description">Description</string>
    <string name="label_url">Image URL</string>
    <string name="hint_url">www.example.com/image001.jpg</string>
    <string name="label_preview">Preview</string>
    <string name="menu_save">Save</string>
    <string name="title_editing">Editing:</string>
    <string name="hint_edt_search">eg. Tom Raider</string>
    <string name="hint_msg_search">Please type something to search.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text" >"Error : "</string>
</resources>
