<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movie"
            type="hexa.app001.Movie" />
    </data>
    <!--///////////////////////////-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_title"
                style="@style/edit_text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/text_size"
                android:text="@={movie.title}"
                app:layout_constraintBottom_toTopOf="@id/edit_subtitle" />

            <EditText
                android:id="@+id/edit_subtitle"
                style="@style/edit_text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_subtitle"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:text="@={movie.subtitle}"
                app:layout_constraintTop_toBottomOf="@id/edit_title" />

            <!--DESCRIPTION-->
            <TextView
                android:id="@+id/label_description"
                style="@style/label_w_edittext_label_margin_n_textsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                app:layout_constraintTop_toBottomOf="@id/edit_subtitle" />

            <EditText
                android:id="@+id/edit_description"
                style="@style/label_w_edittext_edit_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={movie.desc}"
                app:layout_constraintTop_toBottomOf="@id/label_description" />

            <!--URL-->
            <TextView
                android:id="@+id/label_url"
                style="@style/label_w_edittext_label_margin_n_textsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_url"
                app:layout_constraintTop_toBottomOf="@id/edit_description" />

            <EditText
                android:id="@+id/et_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={movie.image}"
                app:layout_constraintTop_toBottomOf="@id/label_url"
                app:layout_constraintBottom_toTopOf="@id/label_preview"
                style="@style/label_w_edittext_edit_margin" />

            <!--PREVIEW IMAGE-->
            <TextView
                android:id="@+id/label_preview"
                style="@style/label_w_edittext_label_margin_n_textsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_preview"
                app:layout_constraintTop_toBottomOf="@id/et_image" />

            <ImageView
                android:id="@+id/image_preview"
                style="@style/label_w_edittext_edit_margin"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/label_preview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>